# PROG-2007

./: CMakeLists.txt  README.md  main.c
Loops/Simple-for_loop/: main.c
Loops/Squares/: main.c
Loops/Triangular-numbers/: main.c
Loops/decisions/: main.c
Loops/digit_sum/: main.c
Loops/divide/: main.c
Loops/evenly_divisable/: main.c
Loops/incerments_deincements/: main.c
Variables/C-To-F/: main.c
Variables/Example-2/: main.c
Variables/Example-3/: main.c
Variables/Example-4/: main.c
Variables/Example-5/: main.c
Variables/Explicit-example/: main.c
Variables/helloworld/: main.c
helloworld/: main.c
